--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,5 @@
 packages:
+  ./pa-prelude
   ./pa-label
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
