--- a/pa-prelude/pa-prelude.cabal
+++ b/pa-prelude/pa-prelude.cabal
@@ -1,8 +1,8 @@
 cabal-version:      3.0
-name:               pa-label
-version:            0.1.0.1
-synopsis:           Labels, and labelled tuples and enums (GHC >9.2)
-description:
+name:               pa-prelude
+version:            0.1.0.0
+synopsis:           The Possehl Analytics Prelude
+description:        A prelude to be used in addition to `base`’s `Prelude`.
 license:            BSD-3-Clause
 license-file:       LICENSE
 -- author:
@@ -64,8 +64,20 @@ common common-options
 
 library
     import:           common-options
-    exposed-modules:  Label
+    exposed-modules:  PossehlAnalyticsPrelude
     -- other-modules:
     -- other-extensions:
-    build-depends:    base <5
     hs-source-dirs:   src
+    build-depends:
+      base <5,
+      error,
+      exceptions,
+      mtl,
+      text,
+      PyF,
+      validation-selective,
+      profunctors,
+      semigroupoids,
+      bytestring,
+      containers,
+      these
