--- a/cabal.project
+++ b/cabal.project
@@ -2,6 +2,7 @@
 packages:
   ./pa-prelude
   ./pa-label
+  ./pa-error-tree
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
