--- a/cabal.project
+++ b/cabal.project
@@ -3,6 +3,7 @@ packages:
   ./pa-prelude
   ./pa-label
   ./pa-error-tree
+  ./pa-field-parser
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
