--- a/cabal.project
+++ b/cabal.project
@@ -4,6 +4,7 @@ packages:
   ./pa-label
   ./pa-error-tree
   ./pa-field-parser
+  ./pa-json
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
