--- a/project.json
+++ b/project.json
@@ -71,6 +71,31 @@
                 "case-insensitive",
                 "text"
             ]
+        },
+        {
+            "name": "pa-json",
+            "version": "0.1.0.0",
+            "synopsis": "Our JSON parsers/encoders",
+            "description": "The interface of `aeson` is unfortunately extremely … suboptimal. Here’s some wrappers trying to improve the situation, which we use internally.",
+            "modules": [
+                "Json",
+                "Json.Enc"
+            ],
+            "dependencies": [
+                "base <5",
+                "pa-prelude",
+                "pa-label",
+                "pa-error-tree",
+                "aeson",
+                "aeson-better-errors",
+                "containers",
+                "scientific",
+                "time",
+                "text",
+                "vector",
+                "hspec-core",
+                "hspec-expectations"
+            ]
         }
     ]
 }
