--- a/cabal.project
+++ b/cabal.project
@@ -5,6 +5,7 @@ packages:
   ./pa-error-tree
   ./pa-field-parser
   ./pa-json
+  ./pa-pretty
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
