--- a/project.json
+++ b/project.json
@@ -74,7 +74,7 @@
         },
         {
             "name": "pa-json",
-            "version": "0.1.0.0",
+            "version": "0.1.1.1",
             "synopsis": "Our JSON parsers/encoders",
             "description": "The interface of `aeson` is unfortunately extremely … suboptimal. Here’s some wrappers trying to improve the situation, which we use internally.",
             "modules": [
@@ -87,7 +87,9 @@
                 "pa-label",
                 "pa-error-tree",
                 "aeson",
+                "aeson-pretty",
                 "aeson-better-errors",
+                "bytestring",
                 "containers",
                 "scientific",
                 "time",
