--- a/cabal.project
+++ b/cabal.project
@@ -6,6 +6,7 @@ packages:
   ./pa-field-parser
   ./pa-json
   ./pa-pretty
+  ./pa-run-command
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
