--- a/hie.yaml
+++ b/hie.yaml
@@ -13,4 +13,6 @@ cradle:
       component: "lib:pa-json"
     - path: "./pa-pretty"
       component: "lib:pa-pretty"
+    - path: "./pa-run-command"
+      component: "lib:pa-run-command"
 
