--- a/project.json
+++ b/project.json
@@ -74,7 +74,7 @@
         },
         {
             "name": "pa-json",
-            "version": "0.2.0.0",
+            "version": "0.2.1.0",
             "synopsis": "Our JSON parsers/encoders",
             "description": "The interface of `aeson` is unfortunately extremely … suboptimal. Here’s some wrappers trying to improve the situation, which we use internally.",
             "modules": [
@@ -90,6 +90,7 @@
                 "aeson-pretty",
                 "aeson-better-errors",
                 "bytestring",
+                "base64-bytestring",
                 "containers",
                 "scientific",
                 "time",
