feat(pa-field-parser): add notEmptyStringP, emptyOr, …
hyphenatedDay and utcTime

emptyOr is particularly cool, it works for any Monoid!

--- a/project.json
+++ b/project.json
@@ -62,14 +62,15 @@
                 "base <5",
                 "pa-prelude",
                 "pa-error-tree",
+                "aeson-better-errors",
+                "aeson",
+                "attoparsec",
+                "case-insensitive",
                 "containers",
                 "scientific",
                 "semigroupoids",
-                "aeson",
-                "aeson-better-errors",
-                "attoparsec",
-                "case-insensitive",
-                "text"
+                "text",
+                "time"
             ]
         },
         {
