--- a/pa-field-parser/pa-field-parser.cabal
+++ b/pa-field-parser/pa-field-parser.cabal
@@ -74,12 +74,13 @@ library
       base <5,
       pa-prelude,
       pa-error-tree,
+      aeson-better-errors,
+      aeson,
+      attoparsec,
+      case-insensitive,
       containers,
       scientific,
       semigroupoids,
-      aeson,
-      aeson-better-errors,
-      attoparsec,
-      case-insensitive,
       text,
+      time,
 
