feat(pa-field-parser): add `literal`
I pondered whether I should leave the orphan instances, but opted for
leaving it the same as our internal code. They could be removed later.
We don’t guarantee backwards-compatilibility anyway.

--- a/project.json
+++ b/project.json
@@ -69,6 +69,7 @@
                 "containers",
                 "scientific",
                 "semigroupoids",
+                "template-haskell",
                 "text",
                 "time"
             ]
