--- a/project.json
+++ b/project.json
@@ -3,7 +3,7 @@
     "hackagePackages": [
         {
             "name": "pa-prelude",
-            "version": "0.1.0.0",
+            "version": "0.2.0.0",
             "synopsis": "The Possehl Analytics Prelude",
             "description": "A prelude to be used in addition to `base`’s `Prelude`",
             "modules": [
@@ -55,7 +55,7 @@
         },
         {
             "name": "pa-field-parser",
-            "version": "0.2.0.1",
+            "version": "0.3.0.0",
             "synopsis": "“Vertical” parsing of values",
             "description": "",
             "modules": [
@@ -63,7 +63,7 @@
             ],
             "dependencies": [
                 "base <5",
-                "pa-prelude",
+                "pa-prelude >= 0.2.0.0",
                 "pa-error-tree",
                 "aeson-better-errors",
                 "aeson",
@@ -79,7 +79,7 @@
         },
         {
             "name": "pa-json",
-            "version": "0.2.1.0",
+            "version": "0.3.0.0",
             "synopsis": "Our JSON parsers/encoders",
             "description": "The interface of `aeson` is unfortunately extremely … suboptimal. Here’s some wrappers trying to improve the situation, which we use internally.",
             "modules": [
@@ -90,7 +90,7 @@
                 "base <5",
                 "pa-prelude",
                 "pa-label",
-                "pa-field-parser",
+                "pa-field-parser >= 0.3.0.0",
                 "pa-error-tree",
                 "aeson",
                 "aeson-pretty",
