feat(pa-test-discover): add, no executable yet
Doesn’t yet contain the executable in the cabal file, because the
template generator is for libraries, but let’s see; maybe I’m gonna
put it in a library.

--- a/cabal.project
+++ b/cabal.project
@@ -7,6 +7,7 @@ packages:
   ./pa-json
   ./pa-pretty
   ./pa-run-command
+  ./pa-test-discover
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
