--- a/project.json
+++ b/project.json
@@ -81,7 +81,7 @@
         },
         {
             "name": "pa-json",
-            "version": "0.3.0.0",
+            "version": "0.4.0.0",
             "synopsis": "Our JSON parsers/encoders",
             "description": "The interface of `aeson` is unfortunately extremely … suboptimal. Here’s some wrappers trying to improve the situation, which we use internally.",
             "modules": [
@@ -100,6 +100,7 @@
                 "bytestring",
                 "base64-bytestring",
                 "containers",
+                "mono-traversable",
                 "scientific",
                 "time",
                 "text",
